# test-chat-server

./: Cargo.toml  README.md
migrations/2021-06-17-053249_create_users/: up.sql
migrations/2021-06-17-071511_create_chats/: up.sql
migrations/2021-06-17-111041_create_rooms/: up.sql
migrations/2021-06-18-152008_create_my_datas/: down.sql  up.sql
migrations/2021-06-20-160446_create_room_members/: down.sql  up.sql
src/: main.rs  schema.rs
src/application/: mod.rs  server.rs
src/application/http/: routes.rs
src/application/web_socket/: main_actor.rs  mod.rs  routes.rs  ws_actor.rs
src/chat_server/: main_actor.rs  mod.rs  ws_actor.rs
src/domain/model/: chat.rs  mod.rs  my_data.rs  room.rs  room_member.rs  user.rs
src/domain/service/: chat_service.rs  mod.rs  my_data_service.rs  room_member_service.rs  room_service.rs  user_service.rs
src/infra/: base_repository.rs  chat_repository.rs  mod.rs  my_data_repository.rs  room_member_repository.rs  room_repository.rs  user_repository.rs
src/repository/: chat.rs  mod.rs  my_data.rs  room.rs  user.rs
src/usecase/: chat_usecase.rs  mod.rs  my_data_usecase.rs  room_usecase.rs  user_usecase.rs
src/utils/: dsl.rs
