[package]
name = "chat-test-app-backend"
version = "0.1.0"
authors = ["march101348 <12351235ti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
